--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,45 @@
   border: none;
   outline: none;
 }
+.App {
+  position: relative;
+  overflow: auto;
+  max-height: 100dvh;
+  width: 100%;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
 .home-card-container{
   /* min-width: 100%; */
   max-width: 1500px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin: 2rem auto;
-  padding: 30px;
+  justify-content: center;
   gap: 20px;
+  margin: auto 20px;
+  margin-top: -12rem;
+}
+.cse {
+  height: 200dvh;
+}
+
+@media (max-width: 1000px) {
+  .home-card-container{
+    margin-top: -6rem;
+  }
+}
+@media (max-width: 700px) {
+  .home-card-container{
+    margin-top: -3rem;
+  }
+}
+@media (max-width: 400px) {
+  .home-card-container{
+    margin-top: -1rem;
+  }
 }
