--- a/src/CategoryFilters.css
+++ b/src/CategoryFilters.css
@@ -1,6 +1,4 @@
 .category-list{
-    position: absolute;
-    top: 60px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -13,10 +11,15 @@
     font-size: 14px;
     font-weight: 400;
     color: white;
-    padding-left: 20px;
 }
 .category-item{
     text-wrap: nowrap;
     display: flex;
     align-items: center;
+    cursor: pointer;
+}
+.all{
+    margin: auto 20px;
+    font-weight: 700;
+    gap: 4px;
 }
