--- a/src/HomeCard.css
+++ b/src/HomeCard.css
@@ -3,12 +3,13 @@
     justify-content: start;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 350px;
-    /* border: 2px solid black; */
+    /* max-width: 350px; */
+    width: 23%;
+    border: 1px solid orange;
     padding: 16px;
     padding-top: 26px;
     gap: 8px;
-    background-color: grey;
+    background-color: white;
     /* margin: 20px auto; */
 }
 .home-card-title{
@@ -26,8 +27,8 @@
     gap: 8px;
 }
 .home-card-item{
-    width: 150px;
-    height: 130px;
+    width: 48%;
+    /* height: 130px; */
 }
 .home-card-item-img img{
     width: 100%;
