--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -20,6 +20,7 @@
 .carousel-img-container{
     /* border: 2px solid black; */
     width: 95%;
+    /* transition: 1s; */
 }
 .carousel-img-container img{
     width: 100%;
@@ -35,6 +36,7 @@
     line-height: 25px;
     background-color: transparent;
     cursor: pointer;
+    text-shadow: 1px 1px 3px white;
 }
 .carousel-left-btn{
     left: 5%;
