--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -34,6 +34,15 @@
     background-color: #232F3E;
     text-align: start;
     padding: 12px 36px;
+    display: flex;
+    align-items: center;
+}
+.slider-sign-in img{
+    height: 100%;
+}
+.slider-sign-in a{
+    text-decoration: none;
+    color: white;
 }
 .side-bar-items{
     display: flex;
