--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   width: 100%;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
 }
 .home-card-container{
   /* min-width: 100%; */
@@ -30,6 +31,11 @@
 }
 .cse {
   height: 200dvh;
+}
+
+.product-card-container{
+  display: flex;
+  gap: 10px;
 }
 
 @media (max-width: 1000px) {
